Correcciones de HTML

--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Las maravillas del Norte</title>
 
-    <link rel="icon" href=".\imgs\empresa.png" type="image/x-icon">
+    <link rel="icon" href="./imgs/empresa.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -18,7 +18,7 @@
 <body class="grid-container">
     <header class="navbar-area">
         <div class="navbar">
-            <a href="index.html" class="item-nav"><img class="logo" src="./imgs/empresa.png"></a>
+            <a href="index.html" class="item-nav"><img class="logo" src="./imgs/empresa.png" alt="logo"></a>
             <nav class="nav-pc">
                 <a href="index.html" class="item-nav">Inicio</a>
                 <a href="index.html#SeccionViajes" class="item-nav">Nuestros Viajes</a> 
@@ -67,7 +67,7 @@
                 <li>
                     <p class="textitem">Transporte:</p> El tipo de vehículo asignado quedara pura y exclusivamente a criterio
                     de La
-                    Empresa.</p>
+                    Empresa.
                 </li>
                 <li>
                     <p class="textitem">Equipaje:</p> El equipaje y demás objetos corren por cuenta y riesgo de los pasajeros.
@@ -130,31 +130,31 @@
                     <label for="genero" class="col-6">¿De cuál de nuestros tours te gustaría conocer más?</label>
                     <div class="col-6">
                         <div>
-                            <input type="radio" name="genero" value="Hombre" id="gHombreID">
-                            <label for="Hombre">Tolar grande</label>
+                            <input type="radio" name="genero" value="Tolar_grande" id="Tolar_grandeID">
+                            <label for="Tolar_grande">Tolar grande</label>
                         </div>
                         <div>
-                            <input type="radio" name="genero" value="Mujer" id="gMujerID">
-                            <label for="Mujer">Serranía de Hornocal</label>
+                            <input type="radio" name="genero" value="Serranía_Hornocal" id="Serranía_HornocalID">
+                            <label for="Serranía_Hornocal">Serranía de Hornocal</label>
                         </div>
                         <div>
-                            <input type="radio" name="genero" value="Otro" id="gOtroID">
-                            <label for="Otro">Cachi</label>
+                            <input type="radio" name="genero" value="Cachi" id="CachiID">
+                            <label for="Cachi">Cachi</label>
                         </div>
 
                          <div>
-                            <input type="radio" name="genero" value="Otro" id="gOtroID">
-                            <label for="Otro">Cafayate</label>
+                            <input type="radio" name="genero" value="Cafayate" id="CafayateID">
+                            <label for="Cafayate">Cafayate</label>
                         </div>
 
                          <div>
-                            <input type="radio" name="genero" value="Otro" id="gOtroID">
-                            <label for="Otro">Parque Nacional Baritú</label>
+                            <input type="radio" name="Baritú" value="Otro" id="BaritúID">
+                            <label for="Baritú">Parque Nacional Baritú</label>
                         </div>
 
                      <div>
-                            <input type="radio" name="genero" value="Otro" id="gOtroID">
-                            <label for="Otro">Valle encantado</label>
+                            <input type="radio" name="genero" value="Valle" id="ValleID">
+                            <label for="Valle">Valle encantado</label>
                         </div>
                     </div>
 
@@ -168,12 +168,12 @@
                             <label for="Recomendacion">Recomendación de nuestros clientes </label>
                         </div>
                         <div>
-                            <input type="checkbox" name="contacto" value="Redes sociales" id="RedesSocialesID">
-                            <label for="Redes sociales">Redes sociales</label>
+                            <input type="checkbox" name="contacto" value="Redes_sociales" id="RedesSocialesID">
+                            <label for="Redes_sociales">Redes sociales</label>
                         </div>
                         <div>
-                            <input type="checkbox" name="contacto" value="Agencias de turismos" id="AgenciasTurismosID">
-                            <label for="Agencias de turismos">Agencias de turismos</label>
+                            <input type="checkbox" name="contacto" value="Agencias_turismos" id="AgenciasTurismosID">
+                            <label for="Agencias_turismos">Agencias de turismos</label>
                         </div>
 
                     </div>
