--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Las maravillas del Norte</title>
     <link href="./css/style.css" rel="stylesheet">
-    <link rel="icon" href=".\imgs\empresa.png" type="image/x-icon">
+    <link rel="icon" href="./imgs/empresa.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/31818fb38f.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="grid-container">
     <header class="navbar-area">
         <div class="navbar">
-            <a href="index.html" class="item-nav"><img class="logo" src="./imgs/empresa.png"></a>
+            <a href="index.html" class="item-nav"><img class="logo" src="./imgs/empresa.png" alt="logo"></a>
             <nav class="nav-pc">
                 <a href="index.html" class="item-nav">Inicio</a>
                 <a href="index.html#SeccionViajes" class="item-nav">Nuestros Viajes</a>
@@ -89,7 +89,7 @@
         <div class="container-index">
 
             <div class="item item-1">
-                <div class="image-interior"><img src="imgs/index/sitios/Talar Grande1.jpg"></div>
+                <div class="image-interior"><img src="imgs/index/sitios/Talar_Grande1.jpg" alt="Imagen Talar Grande"></div>
                 <h2>Tolar grande</h2>
                 <p>En lo profundo en los Andes del Noroeste Argentino, entre grandes volcanes, se esconden pequeños
                     pueblos
@@ -105,7 +105,7 @@
                 <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
             </div>
             <div class="item item-2">
-                <div class="image-interior"><img src="imgs/index/sitios/Hornocal1.jpg"></div>
+                <div class="image-interior"><img src="imgs/index/sitios/Hornocal1.jpg" alt="Imagen Hornocal"></div>
                 <h2>Serranía de Hornocal</h2>
                 <p>La serranía de Hornocal es una sierra ubicada a 25 kilómetros de la ciudad de Humahuaca en la
                     provincia
@@ -121,7 +121,7 @@
                 <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
             </div>
             <div class="item item-3">
-                <div class="image-interior"><img src="imgs/index/sitios/Cachi1.jpg"></div>
+                <div class="image-interior"><img src="imgs/index/sitios/Cachi1.jpg" alt="Imagen Cachi"></div>
                 <h2>Cachi</h2>
                 <p>El municipio de Cachi está ubicado al oeste de la provincia de Salta, en la región de los Valles
                     Calchaquíes, y pertenece al departamento de Cachi. Limita al norte con el municipio de Payogasta y
@@ -137,7 +137,7 @@
                 <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
             </div>
             <div class="item item-4">
-                <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg"></div>
+                <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg" alt="Imagen Cafayate"></div>
                 <h2>Cafayate</h2>
                 <p>Cafayate es la ciudad más importante dentro del circuito turístico de los Valles Calchaquíes. 
                     Aún conserva las características de su arquitectura colonial; sus calles, su iglesia. 
@@ -151,7 +151,7 @@
 
 
             <div class="item item-5">
-                <div class="image-interior"><img src="imgs/index/sitios/baritu.jpg"></div>
+                <div class="image-interior"><img src="imgs/index/sitios/baritu.jpg" alt="Imagen Baritu"></div>
                 <h2>Parque Nacional Baritú</h2>
                 <p>El parque está naturalmente cerrado por cuatro cadenas montañosas, al norte se ubica la Sierra del
                     Porongal, al este la serranía de Las Pavas, al sur el Cerro Negro y las sierras del Río Pescado, y
@@ -166,7 +166,7 @@
             </div>
 
             <div class="item item-6">
-                <div class="image-interior"><img src="imgs/index/sitios/valle.png"></div>
+                <div class="image-interior"><img src="imgs/index/sitios/valle.png" alt="Imagen Valle Encantado"></div>
                 <h2>Valle encantado</h2>
                 <p>Presenta un paisaje extraordinario que une formas y colores naturales de sorprendentes contrastes,
                     donde
@@ -191,7 +191,7 @@
                 <p class="nombre"><b>Ana Luiza Guigues</b></p>
                 <p class="resena"> Foi ótima, super recomendo!! O caminho até lá é lindo e a cidade é muito charmosa. O
                     guia Raul e os motoristas foram super atenciosos e solicitos. Recomendo muito o passeio!</p>
-                <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@Ani_paisajes</span></p>
+                <p class="mira">Mirá sus fotos en: <span class="naranja">@Ani_paisajes</span></p>
             </div>
             <div class="item2 item-2">
                 <p class="viaje">Cachi</p>
@@ -199,7 +199,7 @@
                 <p class="resena"> Hola excelente excursion Angie una genia con sus explicaciones y consejos...Javier el
                     conductor un crak al volante, la gente que compartió la excursión de 10. Aparte el paisaje y Cachi
                     maravilloso</p>
-                <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@AndreFotos</span></p>
+                <p class="mira">Mirá sus fotos en: <span class="naranja">@AndreFotos</span></p>
             </div>
             <div class="item2 item-3">
                 <p class="viaje">Cafayate</p>
@@ -207,7 +207,7 @@
                 <p class="resena"> Muy linda experiencia, excelente el guía Oscar los conductores muy buenos se
                     preocupan todo el tiempo por todos nosotros los lugares buenísimo, muy conformes con todos, muy
                     buenos los paseos, muchas gracias</p>
-                <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@LoreOle</span></p>
+                <p class="mira">Mirá sus fotos en: <span class="naranja">@LoreOle</span></p>
             </div>
             <div class="item2 item-4">
                 <p class="viaje">Tolar grande</p>
@@ -216,7 +216,7 @@
                     excursión fue muy buena, se conocen lugares únicos por su belleza, se come muy rico, se ve
                     fauna muy como las llamas y los cóndores. Se
                     queda uno con ganas de pasar más tiempo.</p>
-                <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@JorgeHuertas</span></p>
+                <p class="mira">Mirá sus fotos en: <span class="naranja">@JorgeHuertas</span></p>
             </div>
 
             <div class="item2 item-5">
@@ -225,7 +225,7 @@
                 <p class="resena">Inpresionante el paisaje y las experiencias vividas allí, cada paso nos adentrábamos en
                     la belleza de la flora y la fauna. Una experiencia realmente inolvidable y por suerte logramos capturar 
                     en nuestras fotografías. </p>
-                <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@Pedro89</span></p>
+                <p class="mira">Mirá sus fotos en: <span class="naranja">@Pedro89</span></p>
             </div>
 
             <div class="item2 item-6">
@@ -234,7 +234,7 @@
                 <p class="resena">Lugar mágico escondido en la cumbre de la Cuesta del Obispo, vale la pena lo recorrido para encontrar este 
                  valle donde se pueden ver que extrañas formaciones rocosas labradas y los verdes campos. Es realmente impresionante ver los Cóndores de tan cerca y ser
                   privilegiados con esta vista. Fuimos fotografiando la experiencia de caminata y la llegada a destino fue un regalo. Lo recomiendo ampliamente. </p>
-                <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@Sandrus</span></p>
+                <p class="mira">Mirá sus fotos en: <span class="naranja">@Sandrus</span></p>
             </div>
         </div>
 
