--- a/index.html
+++ b/index.html
@@ -231,9 +231,8 @@
             <div class="item2 item-6">
                 <p class="viaje">Valle encantado</p>
                 <p class="nombre"><b>Sandra Román</b></p>
-                <p class="resena">Lugar mágico escondido en la cumbre de la Cuesta del Obispo, vale la pena lo recorrido para encontrar este 
-                 valle donde se pueden ver que extrañas formaciones rocosas labradas y los verdes campos. Es realmente impresionante ver los Cóndores de tan cerca y ser
-                  privilegiados con esta vista. Fuimos fotografiando la experiencia de caminata y la llegada a destino fue un regalo. Lo recomiendo ampliamente. </p>
+                <p class="resena">Lugar mágico escondido en la cumbre de la Cuesta del Obispo, vale la pena lo recorrido para encontrar este
+                    valle donde se pueden ver que extrañas formaciones rocosas labradas y los verdes campos. </p>
                 <p class="mira">Mirá sus fotos en: <span class="naranja">@Sandrus</span></p>
             </div>
         </div>
