--- a/contacto.html
+++ b/contacto.html
@@ -98,31 +98,31 @@
             <h4 class="subTitleContactenos">Contactanos:</h4>
             <form class="container-fluid" id="Form">
                 <div class="row fila">
-                    <label for="Nombre" class="col-6">Nombre: *</label>
+                    <label for="nombreID" class="col-6">Nombre: *</label>
                     <input type="text" name="Nombre" id="nombreID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="Apellido" class="col-6">Apellido: *</label>
+                    <label for="apellidoID" class="col-6">Apellido: *</label>
                     <input type="text" name="Apellido" id="apellidoID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="Direccion" class="col-6">Dirección:</label>
+                    <label for="direccionID" class="col-6">Dirección:</label>
                     <input type="text" name="Direccion" id="direccionID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="Ciudad" class="col-6">Ciudad:</label>
+                    <label for="ciudadID" class="col-6">Ciudad:</label>
                     <input type="text" name="Ciudad" id="ciudadID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="codigopostal" class="col-6">Código Postal:</label>
+                    <label for="codigopostalID" class="col-6">Código Postal:</label>
                     <input type="text" name="codigopostal" id="codigopostalID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="email" class="col-6">Correo electrónico:*</label>
+                    <label for="emailID" class="col-6">Correo electrónico:*</label>
                     <input type="email" name="email " id="emailID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="telefono" class="col-6">Teléfono:*</label>
+                    <label for="telefonoID" class="col-6">Teléfono:*</label>
                     <input type="text" name="telefono " id="telefonoID" class="col-6 textinp">
                 </div>
 
@@ -131,30 +131,30 @@
                     <div class="col-6">
                         <div>
                             <input type="radio" name="genero" value="Tolar_grande" id="Tolar_grandeID">
-                            <label for="Tolar_grande">Tolar grande</label>
+                            <label for="Tolar_grandeID">Tolar grande</label>
                         </div>
                         <div>
                             <input type="radio" name="genero" value="Serranía_Hornocal" id="Serranía_HornocalID">
-                            <label for="Serranía_Hornocal">Serranía de Hornocal</label>
+                            <label for="Serranía_HornocalID">Serranía de Hornocal</label>
                         </div>
                         <div>
                             <input type="radio" name="genero" value="Cachi" id="CachiID">
-                            <label for="Cachi">Cachi</label>
+                            <label for="CachiID">Cachi</label>
                         </div>
 
                          <div>
                             <input type="radio" name="genero" value="Cafayate" id="CafayateID">
-                            <label for="Cafayate">Cafayate</label>
+                            <label for="CafayateID">Cafayate</label>
                         </div>
 
                          <div>
                             <input type="radio" name="Baritú" value="Otro" id="BaritúID">
-                            <label for="Baritú">Parque Nacional Baritú</label>
+                            <label for="BaritúID">Parque Nacional Baritú</label>
                         </div>
 
                      <div>
                             <input type="radio" name="genero" value="Valle" id="ValleID">
-                            <label for="Valle">Valle encantado</label>
+                            <label for="ValleID">Valle encantado</label>
                         </div>
                     </div>
 
@@ -165,15 +165,15 @@
                     <div class="col-6">
                         <div>
                             <input type="checkbox" name="contacto" value="Recomendacion" id="RecomendacionID">
-                            <label for="Recomendacion">Recomendación de nuestros clientes </label>
+                            <label for="RecomendacionID">Recomendación de nuestros clientes </label>
                         </div>
                         <div>
                             <input type="checkbox" name="contacto" value="Redes_sociales" id="RedesSocialesID">
-                            <label for="Redes_sociales">Redes sociales</label>
+                            <label for="RedesSocialesID">Redes sociales</label>
                         </div>
                         <div>
                             <input type="checkbox" name="contacto" value="Agencias_turismos" id="AgenciasTurismosID">
-                            <label for="Agencias_turismos">Agencias de turismos</label>
+                            <label for="AgenciasTurismosID">Agencias de turismos</label>
                         </div>
 
                     </div>
