--- a/contacto.html
+++ b/contacto.html
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="row fila">
-                    <label for="genero" class="col-6">¿Te gustaría recibir más info de nuestros tours?</label>
+                    <div class="col-6">¿Te gustaría recibir más info de nuestros tours?</div>
                     <div class="col-6">
                         <div>
                             <input type="radio" name="genero" value="Tolar_grande" id="Tolar_grandeID">
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="row fila">
-                    <label for="contacto" class="col-6">¿De dónde nos conocés?</label>
+                    <div class="col-6">¿De dónde nos conocés?</div>
                     <div class="col-6">
                         <div>
                             <input type="checkbox" name="contacto" value="Recomendacion" id="RecomendacionID">
@@ -176,6 +176,16 @@
                             <label for="AgenciasTurismosID">Agencias de turismos</label>
                         </div>
 
+                    </div>
+                </div>
+                
+                <div class="row fila">
+                    <div class="col-6">¿Desea recibir información de nuevos viajes?</div>
+                    <div class="col-6">
+                        <select id="masinfoID" name="masinfo">
+                            <option value="NO">NO</option>
+                            <option value="SI">SI</option>
+                        </select>
                     </div>
                 </div>
 
