--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="index.html#SeccionOpiniones" class="item-nav">Opiniones</a>
                 <a href="contacto.html#SeccionContactanos" class="item-nav">Contactanos</a>
                 <a href="contacto.html#SeccionTours" class="item-nav">Info de tours</a>
+           <a href="login.html" class="item-nav">Registrate</a>
             </nav>
             <nav class="nav-movile">
                 <i class="fa-solid fa-bars icon-menu" id="icon-menu"></i>
