--- a/contacto.html
+++ b/contacto.html
@@ -25,6 +25,7 @@
                 <a href="index.html#SeccionOpiniones" class="item-nav">Opiniones</a>
                 <a href="contacto.html#SeccionContactanos" class="item-nav">Contactanos</a>
                 <a href="contacto.html#SeccionTours" class="item-nav">Info de tours</a>
+                <a href="Login_register.html" class="item-nav">Acceder/Registrarme</a>
             </nav>
             <nav class="nav-movile">
                 <i class="fa-solid fa-bars icon-menu" id="icon-menu"></i>
@@ -40,6 +41,7 @@
             <a href="index.html#SeccionOpiniones" class="item-nav-movile">Opiniones</a>
             <a href="contacto.html#SeccionContactanos" class="item-nav-movile">Conocenos </a>
             <a href="contacto.html#SeccionTours" class="item-nav-movile">Info de tours</a>
+            <a href="Login_register.html" class="item-nav-movile">Acceder/Registrarme</a>
         </div>
         <div class="nav-movile-der">
             <i class="fa-solid fa-x" id="faxx2"></i>
