--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
             <a href="index.html" class="item-nav"><img class="logo" src="./imgs/empresa.png" alt="logo"></a>
             <nav class="nav-pc">
                 <a href="index.html" class="item-nav">Inicio</a>
-                <a href="index.html#SeccionViajes" class="item-nav">Nuestros Viajes</a>
+                <a href="index.html#SeccionViajes" class="item-nav">Nuestros Viajes</a> 
                 <a href="index.html#SeccionOpiniones" class="item-nav">Opiniones</a>
                 <a href="contacto.html#SeccionContactanos" class="item-nav">Contactanos</a>
                 <a href="contacto.html#SeccionTours" class="item-nav">Info de tours</a>
+                <a href="Login_register.html" class="item-nav">Acceder/Registrarme</a>
             </nav>
             <nav class="nav-movile">
                 <i class="fa-solid fa-bars icon-menu" id="icon-menu"></i>
             </nav>
+
         </div>
 
-    </header>
+    </header>    
     <div class="nav-movile-popup">
         <div class="nav-movile-izq">
             <a href="index.html" class="item-nav-movile">Inicio</a>
-            <a href="index.html#SeccionViajes" class="item-nav-movile">Nuestros Viajes</a>
+            <a href="index.html#SeccionViajes" class="item-nav-movile">Nuestros Viajes</a> 
             <a href="index.html#SeccionOpiniones" class="item-nav-movile">Opiniones</a>
             <a href="contacto.html#SeccionContactanos" class="item-nav-movile">Conocenos </a>
             <a href="contacto.html#SeccionTours" class="item-nav-movile">Info de tours</a>
+            <a href="Login_register.html" class="item-nav-movile">Acceder/Registrarme</a>
         </div>
         <div class="nav-movile-der">
             <i class="fa-solid fa-x" id="faxx2"></i>
